# motion_capture_client

./: Cargo.toml  README.md
src/: common.rs  main.rs  ui.rs
