[package]
name = "motion_capture_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7.0" }
paho-mqtt = "0.12.0"
log = "0.4"
env_logger = "0.9"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }